# cloudtg

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: app-release.yml  tdlib-prebuilt.yml
docs/: HELP.md  plan.txt  review-2026-02-09.md
docs/issues/: filemanager-listener-race.md
scripts/: fetch-tdlib.js  fetch-tdlib.ps1  fetch-tdlib.sh  make-zip.sh  run-dev.ps1  run-dev.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: dev.json  main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_remove_tg_api_keys.sql  0003_add_broken_flags.sql
src-tauri/resources/tdlib/: README.txt
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  paths.rs  secrets.rs  settings.rs  sqlx.rs  state.rs
src-tauri/src/app/: backup.rs  dirs.rs  files.rs  indexer.rs  mod.rs  models.rs  reconcile.rs  sync.rs
src-tauri/src/db/: mod.rs
src-tauri/src/fsmeta/: mod.rs
src-tauri/src/telegram/: mock.rs  mod.rs  tdlib.rs
src-tauri/tests/: db_migrations.rs
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: tauri.ts
ui/src/__tests__/: app-lifecycle.test.ts  file-actions.test.tsx  file-manager-listeners.test.ts
ui/src/components/: FileManager.tsx  Login.tsx  Settings.tsx  fileManagerListeners.ts
ui/src/components/common/: Hint.tsx
ui/src/components/file-manager/: FileList.tsx  SearchPanel.tsx  SharePanel.tsx  TreePanel.tsx  fileActions.ts
ui/src/pages/: App.tsx  appLifecycle.ts
ui/src/store/: app.ts
