[package]
name = "cloudtg"
version = "0.1.1"
description = "CloudTG backend (Tauri + Rust)"
authors = ["you"]
edition = "2021"

build = "build.rs"

[lib]
name = "cloudtg_lib"
path = "src/lib.rs"

[[bin]]
name = "cloudtg"
path = "src/main.rs"

[features]
default = ["tdlib"]
mock_telegram = []
tdlib = []

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
thiserror = "2"
ulid = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
libloading = "0.8"
dotenvy = "0.15"
keyring = "2"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand_core = "0.6"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
