[package]
name = "cloudtg"
version = "1.0.1"
description = "CloudTG backend (Tauri + Rust)"
authors = ["you"]
edition = "2021"
repository = "https://github.com/sumenkov/cloudtg"

build = "build.rs"

[lib]
name = "cloudtg_lib"
path = "src/lib.rs"

[[bin]]
name = "cloudtg"
path = "src/main.rs"

[features]
default = ["tdlib"]
mock_telegram = []
tdlib = []

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
thiserror = "2"
ulid = "1"
sqlx-core = { version = "0.8", default-features = false, features = ["_rt-tokio", "migrate", "chrono"] }
sqlx-sqlite = { version = "0.8", default-features = false, features = ["migrate", "chrono", "bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
libloading = "0.9"
dotenvy = "0.15"
keyring = "3"
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.4"
base64 = "0.22"
ureq = { version = "3", default-features = true }
tar = "0.4"
flate2 = "1"
zip = "7"
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = { version = "0.17", default-features = false, features = ["gtk3"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dev-dependencies]
